--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,8 @@
     "import seaborn as sns\n",
     "\n",
     "## machine learning\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder # for encoding\n",
+    "from sklearn.preprocessing import StandardScaler # for scaling"
    ]
   },
   {
@@ -1965,6 +1966,452 @@
    "metadata": {},
    "source": [
     "### 7.2 Create New Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>FamilySize</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SibSp  Parch  FamilySize\n",
+       "0      1      0           1\n",
+       "1      1      0           1\n",
+       "2      0      0           0\n",
+       "3      1      0           1\n",
+       "4      0      0           0\n",
+       "5      0      0           0\n",
+       "6      0      0           0\n",
+       "7      3      1           4\n",
+       "8      0      2           2\n",
+       "9      1      0           1"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create `Family_size`\n",
+    "df6[\"FamilySize\"] = df6[\"SibSp\"] + df6[\"Parch\"]\n",
+    "\n",
+    "# check results\n",
+    "df6[[\"SibSp\", \"Parch\", \"FamilySize\"]].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FamilySize</th>\n",
+       "      <th>IsAlone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FamilySize  IsAlone\n",
+       "0           1        0\n",
+       "1           1        0\n",
+       "2           0        1\n",
+       "3           1        0\n",
+       "4           0        1\n",
+       "5           0        1\n",
+       "6           0        1\n",
+       "7           4        0\n",
+       "8           2        0\n",
+       "9           1        0"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create `IsAlone`\n",
+    "df6[\"IsAlone\"] = (df6[\"FamilySize\"] == 0).astype(int)\n",
+    "\n",
+    "# check the results\n",
+    "df6[[\"FamilySize\", \"IsAlone\"]].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.3 Scale Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 880 entries, 0 to 890\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column            Non-Null Count  Dtype   \n",
+      "---  ------            --------------  -----   \n",
+      " 0   PassengerId       880 non-null    int64   \n",
+      " 1   Survived          880 non-null    category\n",
+      " 2   Pclass            880 non-null    category\n",
+      " 3   Name              880 non-null    object  \n",
+      " 4   Sex               880 non-null    object  \n",
+      " 5   Age               880 non-null    float64 \n",
+      " 6   SibSp             880 non-null    int64   \n",
+      " 7   Parch             880 non-null    int64   \n",
+      " 8   Ticket            880 non-null    object  \n",
+      " 9   Fare              880 non-null    float64 \n",
+      " 10  Embarked          880 non-null    category\n",
+      " 11  SibSp_log         880 non-null    float64 \n",
+      " 12  Parch_log         880 non-null    float64 \n",
+      " 13  Fare_log          880 non-null    float64 \n",
+      " 14  Sex_encoded       880 non-null    int64   \n",
+      " 15  Embarked_encoded  880 non-null    int64   \n",
+      " 16  Pclass_encoded    880 non-null    int64   \n",
+      " 17  FamilySize        880 non-null    int64   \n",
+      " 18  IsAlone           880 non-null    int64   \n",
+      "dtypes: category(3), float64(5), int64(8), object(3)\n",
+      "memory usage: 119.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "## get info on df6\n",
+    "df6.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>FamilySize</th>\n",
+       "      <th>Age_scaled</th>\n",
+       "      <th>Fare_scaled</th>\n",
+       "      <th>FamilySize_scaled</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.558834</td>\n",
+       "      <td>-0.500783</td>\n",
+       "      <td>0.054026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.745245</td>\n",
+       "      <td>0.782122</td>\n",
+       "      <td>0.054026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.232814</td>\n",
+       "      <td>-0.487259</td>\n",
+       "      <td>-0.563419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.500730</td>\n",
+       "      <td>0.417820</td>\n",
+       "      <td>0.054026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500730</td>\n",
+       "      <td>-0.484755</td>\n",
+       "      <td>-0.563419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>8.4583</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.069804</td>\n",
+       "      <td>-0.476574</td>\n",
+       "      <td>-0.563419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.049324</td>\n",
+       "      <td>0.393027</td>\n",
+       "      <td>-0.563419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21.0750</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-2.188932</td>\n",
+       "      <td>-0.223799</td>\n",
+       "      <td>1.906363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>11.1333</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.151309</td>\n",
+       "      <td>-0.422981</td>\n",
+       "      <td>0.671472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>30.0708</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.210873</td>\n",
+       "      <td>-0.043569</td>\n",
+       "      <td>0.054026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age     Fare  FamilySize  Age_scaled  Fare_scaled  FamilySize_scaled\n",
+       "0  22.0   7.2500           1   -0.558834    -0.500783           0.054026\n",
+       "1  38.0  71.2833           1    0.745245     0.782122           0.054026\n",
+       "2  26.0   7.9250           0   -0.232814    -0.487259          -0.563419\n",
+       "3  35.0  53.1000           1    0.500730     0.417820           0.054026\n",
+       "4  35.0   8.0500           0    0.500730    -0.484755          -0.563419\n",
+       "5  28.0   8.4583           0   -0.069804    -0.476574          -0.563419\n",
+       "6  54.0  51.8625           0    2.049324     0.393027          -0.563419\n",
+       "7   2.0  21.0750           4   -2.188932    -0.223799           1.906363\n",
+       "8  27.0  11.1333           2   -0.151309    -0.422981           0.671472\n",
+       "9  14.0  30.0708           1   -1.210873    -0.043569           0.054026"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scale `Age`, `Fare`, `FamilySize`\n",
+    "\n",
+    "## instantiate the scaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "## fit and transform\n",
+    "df6[[\"Age_scaled\", \"Fare_scaled\", \"FamilySize_scaled\"]] = scaler.fit_transform(df6[[\"Age\", \"Fare\", \"FamilySize\"]])\n",
+    "\n",
+    "## check the results\n",
+    "df6[[\"Age\", \"Fare\", \"FamilySize\", \"Age_scaled\", \"Fare_scaled\", \"FamilySize_scaled\"]].head(10)"
    ]
   }
  ],
