--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 281,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "max     891.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "max      2.197225    1.945910    6.240917  "
       ]
      },
-     "execution_count": 295,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "<Axes: xlabel='Age'>"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
        "<Axes: xlabel='Age'>"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
        "9  female            0"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
        "9        C                 0"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1960,7 @@
        "9      2               1"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[315], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m## fit and transform\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m df6[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFamilySize_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m]] \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(\u001b[43mdf6\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAge\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFamilySize\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m## check the results\u001b[39;00m\n\u001b[0;32m     10\u001b[0m df6[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFare\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFamilySize_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m10\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[352], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m## fit and transform\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m df6[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFamilySize_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m]] \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(\u001b[43mdf6\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAge\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFamilySize\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m## check the results\u001b[39;00m\n\u001b[0;32m     10\u001b[0m df6[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFare\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFamilySize_scaled\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m10\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\sam_h\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\frame.py:4108\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4106\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   4107\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[1;32m-> 4108\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m   4110\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   4111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
       "File \u001b[1;32mc:\\Users\\sam_h\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6200\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
       "File \u001b[1;32mc:\\Users\\sam_h\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6252\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6249\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6251\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m-> 6252\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
@@ -2814,8 +2814,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this work was twofold:\n",
-    "1. Create prediction model\n",
+    "The goal of this work with the Titanic dataset was twofold:\n",
+    "1. Create prediction model for the survival of the Titanic passengers\n",
     "2. Identify important predictors\n",
     "\n",
     "To this end, I first imported and cleaned the dataset:\n",
