Change import file name

--- a/titanic/titanic_notebook.ipynb
+++ b/titanic/titanic_notebook.ipynb
@@ -69,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load dataset\n",
-    "df = pd.read_csv(\"train.csv\")"
+    "df = pd.read_csv(\"titanic_dataset_train.csv\")"
    ]
   },
   {
