Fix code got ggplot2

--- a/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
+++ b/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -541,7 +541,7 @@
     "                axis.text.x = element_text(size = 12),\n",
     "                axis.text.y = element_text(size = 12),\n",
     "                legend.title = element_text(size = 14, face = \"bold\"),\n",
-    "                legend.text = element_text(size = 12),) +\n",
+    "                legend.text = element_text(size = 12)) +\n",
     "        labs(title = \"Attrition Risk by Department\",\n",
     "            x = \"Departments\",\n",
     "            y = \"Number of Employees\",\n",
