Summarise the findings from the bar plot for Q1

--- a/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
+++ b/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -543,15 +543,19 @@
     "                legend.title = element_text(size = 14, face = \"bold\"),\n",
     "                legend.text = element_text(size = 12)) +\n",
     "        labs(title = \"Attrition Risk by Department\",\n",
-    "            x = \"Departments\",\n",
-    "            y = \"Number of Employees\",\n",
-    "            fill = \"Attrition Status\")"
+    "                x = \"Departments\",\n",
+    "                y = \"Number of Employees\",\n",
+    "                fill = \"Attrition Status\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Based on the bar plot:\n",
+    "- R&D has the highest attrition risk and highest retention\n",
+    "- HR has the lowest attrition risk"
+   ]
   }
  ],
  "metadata": {
