Rerun all cells

--- a/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
+++ b/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
@@ -78,14 +78,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "86925f29",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'tidyverse' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'effsize' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'ggcorrplot' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'tidymodels' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'themis' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'vip' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'pdp' is in use and will not be installed\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Install packages\n",
     "install.packages(\"tidyverse\") # data manipulation\n",
@@ -99,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 85,
    "id": "06f1683a",
    "metadata": {
     "vscode": {
@@ -136,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "id": "20d6129e",
    "metadata": {
     "vscode": {
@@ -151,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "id": "10024e7c",
    "metadata": {
     "vscode": {
@@ -255,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "id": "b00265f2",
    "metadata": {
     "vscode": {
@@ -322,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "id": "578375ab",
    "metadata": {
     "vscode": {
@@ -407,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "fe4ecd03",
    "metadata": {
     "vscode": {
@@ -479,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
    "id": "f1b1267e",
    "metadata": {
     "vscode": {
@@ -523,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "04cf209d",
    "metadata": {
     "vscode": {
@@ -581,7 +602,8 @@
     "hr_cleaned |>\n",
     "  \n",
     "  ## Group and count by attrition\n",
-    "  count(Attrition, name = \"Count\") |>\n",
+    "  count(Attrition,\n",
+    "        name = \"Count\") |>\n",
     "  \n",
     "  ## Compute percentage\n",
     "  mutate(Percent = round(Count / sum(Count) * 100, 2))"
@@ -613,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "id": "ceda4671",
    "metadata": {
     "vscode": {
@@ -704,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "id": "a044b973",
    "metadata": {
     "vscode": {
@@ -774,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 95,
    "id": "3a48873d",
    "metadata": {
     "vscode": {
@@ -839,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 96,
    "id": "bdd205be",
    "metadata": {
     "vscode": {
@@ -925,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 97,
    "id": "55f15bf8",
    "metadata": {
     "vscode": {
@@ -993,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 98,
    "id": "9746a531",
    "metadata": {
     "vscode": {
@@ -1028,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 99,
    "id": "96c9b25e",
    "metadata": {
     "vscode": {
@@ -1085,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 100,
    "id": "b2f79c83",
    "metadata": {
     "vscode": {
@@ -1176,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 101,
    "id": "01b476f9",
    "metadata": {
     "vscode": {
@@ -1261,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 102,
    "id": "832f76d9",
    "metadata": {
     "vscode": {
@@ -1352,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "id": "0c709ed7",
    "metadata": {
     "vscode": {
@@ -1440,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 104,
    "id": "234585ea",
    "metadata": {
     "vscode": {
@@ -1528,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 105,
    "id": "32609fb4",
    "metadata": {
     "vscode": {
@@ -1580,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 106,
    "id": "2703466d",
    "metadata": {
     "vscode": {
@@ -1604,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 107,
    "id": "9658d3a3",
    "metadata": {
     "vscode": {
@@ -1633,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 108,
    "id": "fe8b767d",
    "metadata": {
     "vscode": {
@@ -1654,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 109,
    "id": "dad60664",
    "metadata": {
     "vscode": {
@@ -1676,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 110,
    "id": "82249166",
    "metadata": {
     "vscode": {
@@ -1698,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 111,
    "id": "1c703739",
    "metadata": {
     "vscode": {
@@ -1716,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 112,
    "id": "d906319a",
    "metadata": {
     "vscode": {
@@ -1746,7 +1768,7 @@
      "data": {
       "text/plain": [
        "   user  system elapsed \n",
-       "  96.89    1.55  283.83 "
+       "  99.37    1.64  289.52 "
       ]
      },
      "metadata": {},
@@ -1784,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 113,
    "id": "32eafc51",
    "metadata": {
     "vscode": {
@@ -1804,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 114,
    "id": "abfa205b",
    "metadata": {
     "vscode": {
@@ -1829,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 115,
    "id": "09cbe450",
    "metadata": {
     "vscode": {
@@ -1915,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 116,
    "id": "949dba46",
    "metadata": {
     "vscode": {
@@ -1948,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 117,
    "id": "1b3a7f0a",
    "metadata": {
     "vscode": {
@@ -2047,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 118,
    "id": "2f7dfdaf",
    "metadata": {
     "vscode": {
@@ -2071,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "3e78a894",
    "metadata": {
     "vscode": {
@@ -2108,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 120,
    "id": "b4764a41",
    "metadata": {
     "vscode": {
@@ -2129,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 121,
    "id": "e4629679",
    "metadata": {
     "vscode": {
@@ -2151,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 122,
    "id": "c6ea921f",
    "metadata": {
     "vscode": {
@@ -2173,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 123,
    "id": "46d25650",
    "metadata": {
     "vscode": {
@@ -2191,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 124,
    "id": "2b8f0ecf",
    "metadata": {
     "vscode": {
@@ -2203,7 +2225,7 @@
      "data": {
       "text/plain": [
        "   user  system elapsed \n",
-       " 184.30    2.08  614.07 "
+       " 244.18    2.83  596.37 "
       ]
      },
      "metadata": {},
@@ -2233,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 125,
    "id": "731bb91c",
    "metadata": {
     "vscode": {
@@ -2253,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 126,
    "id": "82d6fe5e",
    "metadata": {
     "vscode": {
@@ -2277,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 127,
    "id": "e09b58c8",
    "metadata": {
     "vscode": {
@@ -2371,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 128,
    "id": "887bee8a",
    "metadata": {
     "vscode": {
@@ -2404,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 129,
    "id": "9cf18143",
    "metadata": {
     "vscode": {
@@ -2508,7 +2530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 130,
    "id": "6ceb7ee5",
    "metadata": {
     "vscode": {
@@ -2584,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 131,
    "id": "c45cd4a8",
    "metadata": {
     "vscode": {
@@ -2761,7 +2783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 132,
    "id": "da4323c3",
    "metadata": {
     "vscode": {
@@ -2838,7 +2860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 133,
    "id": "3ca24fb2",
    "metadata": {
     "vscode": {
@@ -2853,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 134,
    "id": "a5483bab",
    "metadata": {
     "vscode": {
@@ -2988,7 +3010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 135,
    "id": "f3261a83",
    "metadata": {
     "vscode": {
@@ -3030,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 136,
    "id": "0332754d",
    "metadata": {
     "vscode": {
