Revise section 5.2 to be more concise

--- a/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
+++ b/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "04cf209d",
    "metadata": {
     "vscode": {
@@ -3214,85 +3214,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9655944e",
+   "id": "89e3a8bb",
    "metadata": {},
    "source": [
-    "### 5.2.1 Overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "78880fd5",
-   "metadata": {},
-   "source": [
-    "I first explored the relationships between numeric variables and attrition and found that these relationships are small, suggesting that attrition may not be easily attributable to any single factor."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6bfaee06",
-   "metadata": {},
-   "source": [
-    "### 5.2.2 The Three Likely Predictors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6fad4c6",
-   "metadata": {},
-   "source": [
+    "**Overview**  \n",
+    "I began exploring the relationships between attrition and the various factors by computing a correlation matrix. With this I found that attrition correlated very weakly, if any, to all numeric variables. This suggests that attrition may not be attributable to any single factor.\n",
     "\n",
-    "Next, I dived into the attrition patterns among three factors which are likely to contribute to attrition, namely monthly income, overtime, and environment satisfaction.\n",
+    "**Deep-dive explorations**  \n",
+    "Next, I focused the relationships between attrition and several factors which may predict it. The factors and corresponding attrition patterns are summarised below.\n",
     "\n",
-    "**Monthly income**  \n",
-    "I found that on average, people who left earned less than those who stayed, suggesting that monthly income may be a major predictor of attrition.\n",
-    "\n",
-    "**Overtime**  \n",
-    "In the overtime group, there were a higher percentage of people leaving and a smaller percentage of people staying. This suggests that working overtime likely contributes to attrition.\n",
-    "\n",
-    "**Environment satisfaction**  \n",
-    "There was a significant yet small difference between people who left and those who stayed in terms of environment satisfaction. This suggests that this factor may be a valid but has little relatively small influence on attrition. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88965d52",
-   "metadata": {},
-   "source": [
-    "### 5.2.3 Department & Job Role"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "999c6cda",
-   "metadata": {},
-   "source": [
-    "I also explored attrition in relation to job structures: department and job role.\n",
-    "\n",
-    "**Department**  \n",
-    "I found that Sales had the highest percentage of people leaving and lowest percentage of people staying, suggesting that this department may be mostly heavily impacted by attrition.\n",
-    "\n",
-    "Reversed is true for R&D, where the percentage of people staying was the highest, and the percentage of people leaving the lowest.\n",
-    "\n",
-    "**Job role (and job level)**  \n",
-    "I found that Sales Rep had the highest percentage of attrition, and Research Director had the lowest percentage of attrition.\n",
-    "\n",
-    "Furthermore, with an additional analysis that followed up on the observation that employees who left tended to cluster in the non-management positions, I found that lower job levels had higher percentage of attrition compared to higher job levels."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4c6fe0d",
-   "metadata": {},
-   "source": [
-    "### 5.2.4 Gender & Age\n",
-    "Lastly, I explored attrition in relation to gender and age.\n",
-    "\n",
-    "**Gender**  \n",
-    "For both gender, the percentage of attrition was similar, suggesting that gender may not be a contributor to attrition.\n",
-    "\n",
-    "**Age**  \n",
-    "I found that in the younger employees, there were a higher number of people leaving than staying, suggesting that attrition may be predictable by age."
+    "- **Monthly income:** Employees who left tended to earn more than those who stayed.\n",
+    "- **Overtime:** Employees who worked over time were more likely to leave than stay.\n",
+    "- **Environment satisfaction:** There was a small yet significant difference between employees who left versus stayed such that the former tended to be less satisfied with their work settings than the latter.\n",
+    "- **Department:** Sales experienced the highest percentage of attrition, and R&D the lowest.\n",
+    "- **Job role & job level:** Employees who left tended to be in the lower job levels and worked as Sale Reps.\n",
+    "- **Gender:** No difference in attrition rate between the two genders.\n",
+    "- **Age:** Among the younger employees, there were more people who left than stayed."
    ]
   },
   {
