--- a/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
+++ b/ibm_hr_employee_attrition/hr_employee_attrition_code.ipynb
@@ -5,7 +5,7 @@
    "id": "8d1e28ce",
    "metadata": {},
    "source": [
-    "# Predicting Employee Attrition With Machine Learning in R"
+    "# Exploring & Predicting Employee Attrition With Machine Learning in R"
    ]
   },
   {
