Add number of rows check for training and test sets

--- a/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "578375ab",
    "metadata": {
     "vscode": {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fe4ecd03",
    "metadata": {
     "vscode": {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f1b1267e",
    "metadata": {
     "vscode": {
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "32609fb4",
    "metadata": {
     "vscode": {
@@ -1607,6 +1607,74 @@
     "\n",
     "## Create a training set\n",
     "hr_test <- testing(hr_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b76de9dd",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1175"
+      ],
+      "text/latex": [
+       "1175"
+      ],
+      "text/markdown": [
+       "1175"
+      ],
+      "text/plain": [
+       "[1] 1175"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Check the number of rows the training set\n",
+    "nrow(hr_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a84cec16",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "295"
+      ],
+      "text/latex": [
+       "295"
+      ],
+      "text/markdown": [
+       "295"
+      ],
+      "text/plain": [
+       "[1] 295"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Check the number of rows the test set\n",
+    "nrow(hr_test)"
    ]
   },
   {
