--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "20d6129e",
    "metadata": {
     "vscode": {
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "hr <- read.csv(\"https://raw.githubusercontent.com/svarong-port/data-analytics-projects/refs/heads/main/ibm_hr_employee_attrition/hr_employee_attrition_dataset.csv\")"
+    "hr <- read.csv(\"hr_employee_attrition_dataset.csv\")"
    ]
   },
   {
