Adjust code formatting

--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bdd205be",
    "metadata": {
     "vscode": {
@@ -926,7 +926,8 @@
     "  group_by(OverTime, Attrition) |>\n",
     "  \n",
     "  ## Count the observations in each group\n",
-    "  summarise(Count = n(), .groups = \"drop\") |>\n",
+    "  summarise(Count = n(),\n",
+    "            .groups = \"drop\") |>\n",
     "  \n",
     "  ## Group by overtime\n",
     "  group_by(OverTime) |>\n",
@@ -1140,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b2f79c83",
    "metadata": {
     "vscode": {
@@ -1172,7 +1173,8 @@
     "  group_by(Department, Attrition) |>\n",
     "  \n",
     "  ## Count the number of observations\n",
-    "  summarise(Count = n(), .groups = \"drop\") |>\n",
+    "  summarise(Count = n(),\n",
+    "            .groups = \"drop\") |>\n",
     "  \n",
     "  ## Group by department\n",
     "  group_by(Department) |>\n",
@@ -1407,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0c709ed7",
    "metadata": {
     "vscode": {
@@ -1439,7 +1441,8 @@
     "  group_by(Gender, Attrition) |>\n",
     "  \n",
     "  ## Count the number of observations\n",
-    "  summarise(Count = n(), .groups = \"drop\") |>\n",
+    "  summarise(Count = n(),\n",
+    "            .groups = \"drop\") |>\n",
     "  \n",
     "  ## Group by gender\n",
     "  mutate(Percent = Count / sum(Count) * 100) |>\n",
@@ -2701,7 +2704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "c45cd4a8",
    "metadata": {
     "vscode": {
@@ -2804,7 +2807,9 @@
     "# Adjust the prediction threshold\n",
     "\n",
     "## Define a set of threshold\n",
-    "thresholds <- seq(0.1, 0.9, by = 0.1)\n",
+    "thresholds <- seq(0.1,\n",
+    "                  0.9,\n",
+    "                  by = 0.1)\n",
     "\n",
     "\n",
     "## Create empty vectors to store results from a for loop\n",
