For threshold calibration, adjust 9 to length(thresholds)

--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -2815,19 +2815,19 @@
     "## Create empty vectors to store results from a for loop\n",
     "\n",
     "### Recall values\n",
-    "recalls <- numeric(9)\n",
+    "recalls <- numeric(length(thresholds))\n",
     "\n",
     "### Precision values\n",
-    "precisions <- numeric(9)\n",
+    "precisions <- numeric(length(thresholds))\n",
     "\n",
     "### The number of all cases\n",
-    "all <- numeric(9)\n",
+    "all <- numeric(length(thresholds))\n",
     "\n",
     "### The number of all positive classes\n",
-    "all_positives <- numeric(9)\n",
+    "all_positives <- numeric(length(thresholds))\n",
     "\n",
     "### The number of true positives\n",
-    "true_positives <- numeric(9)\n",
+    "true_positives <- numeric(length(thresholds))\n",
     "\n",
     "\n",
     "## Create a for loop to loop through the thresholds\n",
