Adjust comments for the top five predictors

--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -102,7 +102,7 @@
       "package 'tidyverse' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpiG9GBm\\downloaded_packages\n"
+      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpUt4diR\\downloaded_packages\n"
      ]
     },
     {
@@ -121,7 +121,7 @@
       "package 'effsize' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpiG9GBm\\downloaded_packages\n"
+      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpUt4diR\\downloaded_packages\n"
      ]
     },
     {
@@ -140,7 +140,7 @@
       "package 'ggcorrplot' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpiG9GBm\\downloaded_packages\n"
+      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpUt4diR\\downloaded_packages\n"
      ]
     },
     {
@@ -159,7 +159,7 @@
       "package 'tidymodels' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpiG9GBm\\downloaded_packages\n"
+      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpUt4diR\\downloaded_packages\n"
      ]
     },
     {
@@ -178,7 +178,7 @@
       "package 'themis' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpiG9GBm\\downloaded_packages\n"
+      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpUt4diR\\downloaded_packages\n"
      ]
     },
     {
@@ -197,7 +197,7 @@
       "package 'vip' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpiG9GBm\\downloaded_packages\n"
+      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpUt4diR\\downloaded_packages\n"
      ]
     },
     {
@@ -234,7 +234,7 @@
      "text": [
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpiG9GBm\\downloaded_packages\n"
+      "\tC:\\Users\\sam_h\\AppData\\Local\\Temp\\RtmpUt4diR\\downloaded_packages\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "20d6129e",
    "metadata": {
     "vscode": {
@@ -2021,7 +2021,7 @@
      "data": {
       "text/plain": [
        "   user  system elapsed \n",
-       " 147.17    2.56  276.19 "
+       " 170.65    2.69  282.01 "
       ]
      },
      "metadata": {},
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 32,
    "id": "e59a4a51",
    "metadata": {
     "vscode": {
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "id": "32eafc51",
    "metadata": {
     "vscode": {
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 34,
    "id": "abfa205b",
    "metadata": {
     "vscode": {
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 35,
    "id": "09cbe450",
    "metadata": {
     "vscode": {
@@ -2202,12 +2202,12 @@
        "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>No</td><td>0.33294762</td><td>0.6670524</td><td>train/test split</td><td> 1</td><td>Yes</td><td>Preprocessor1_Model1</td></tr>\n",
-       "\t<tr><td>No</td><td>0.25913333</td><td>0.7408667</td><td>train/test split</td><td> 5</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
-       "\t<tr><td>No</td><td>0.06323810</td><td>0.9367619</td><td>train/test split</td><td>10</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
-       "\t<tr><td>No</td><td>0.17057619</td><td>0.8294238</td><td>train/test split</td><td>22</td><td>Yes</td><td>Preprocessor1_Model1</td></tr>\n",
-       "\t<tr><td>No</td><td>0.38169206</td><td>0.6183079</td><td>train/test split</td><td>24</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
-       "\t<tr><td>No</td><td>0.03181905</td><td>0.9681810</td><td>train/test split</td><td>28</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>No</td><td>0.31360476</td><td>0.6863952</td><td>train/test split</td><td> 1</td><td>Yes</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>No</td><td>0.23238095</td><td>0.7676190</td><td>train/test split</td><td> 5</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>No</td><td>0.09271905</td><td>0.9072810</td><td>train/test split</td><td>10</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>No</td><td>0.15583810</td><td>0.8441619</td><td>train/test split</td><td>22</td><td>Yes</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>No</td><td>0.36726022</td><td>0.6327398</td><td>train/test split</td><td>24</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>No</td><td>0.03867143</td><td>0.9613286</td><td>train/test split</td><td>28</td><td>No </td><td>Preprocessor1_Model1</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -2217,12 +2217,12 @@
        " .pred\\_class & .pred\\_Yes & .pred\\_No & id & .row & Attrition & .config\\\\\n",
        " <fct> & <dbl> & <dbl> & <chr> & <int> & <fct> & <chr>\\\\\n",
        "\\hline\n",
-       "\t No & 0.33294762 & 0.6670524 & train/test split &  1 & Yes & Preprocessor1\\_Model1\\\\\n",
-       "\t No & 0.25913333 & 0.7408667 & train/test split &  5 & No  & Preprocessor1\\_Model1\\\\\n",
-       "\t No & 0.06323810 & 0.9367619 & train/test split & 10 & No  & Preprocessor1\\_Model1\\\\\n",
-       "\t No & 0.17057619 & 0.8294238 & train/test split & 22 & Yes & Preprocessor1\\_Model1\\\\\n",
-       "\t No & 0.38169206 & 0.6183079 & train/test split & 24 & No  & Preprocessor1\\_Model1\\\\\n",
-       "\t No & 0.03181905 & 0.9681810 & train/test split & 28 & No  & Preprocessor1\\_Model1\\\\\n",
+       "\t No & 0.31360476 & 0.6863952 & train/test split &  1 & Yes & Preprocessor1\\_Model1\\\\\n",
+       "\t No & 0.23238095 & 0.7676190 & train/test split &  5 & No  & Preprocessor1\\_Model1\\\\\n",
+       "\t No & 0.09271905 & 0.9072810 & train/test split & 10 & No  & Preprocessor1\\_Model1\\\\\n",
+       "\t No & 0.15583810 & 0.8441619 & train/test split & 22 & Yes & Preprocessor1\\_Model1\\\\\n",
+       "\t No & 0.36726022 & 0.6327398 & train/test split & 24 & No  & Preprocessor1\\_Model1\\\\\n",
+       "\t No & 0.03867143 & 0.9613286 & train/test split & 28 & No  & Preprocessor1\\_Model1\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -2231,22 +2231,22 @@
        "\n",
        "| .pred_class &lt;fct&gt; | .pred_Yes &lt;dbl&gt; | .pred_No &lt;dbl&gt; | id &lt;chr&gt; | .row &lt;int&gt; | Attrition &lt;fct&gt; | .config &lt;chr&gt; |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| No | 0.33294762 | 0.6670524 | train/test split |  1 | Yes | Preprocessor1_Model1 |\n",
-       "| No | 0.25913333 | 0.7408667 | train/test split |  5 | No  | Preprocessor1_Model1 |\n",
-       "| No | 0.06323810 | 0.9367619 | train/test split | 10 | No  | Preprocessor1_Model1 |\n",
-       "| No | 0.17057619 | 0.8294238 | train/test split | 22 | Yes | Preprocessor1_Model1 |\n",
-       "| No | 0.38169206 | 0.6183079 | train/test split | 24 | No  | Preprocessor1_Model1 |\n",
-       "| No | 0.03181905 | 0.9681810 | train/test split | 28 | No  | Preprocessor1_Model1 |\n",
+       "| No | 0.31360476 | 0.6863952 | train/test split |  1 | Yes | Preprocessor1_Model1 |\n",
+       "| No | 0.23238095 | 0.7676190 | train/test split |  5 | No  | Preprocessor1_Model1 |\n",
+       "| No | 0.09271905 | 0.9072810 | train/test split | 10 | No  | Preprocessor1_Model1 |\n",
+       "| No | 0.15583810 | 0.8441619 | train/test split | 22 | Yes | Preprocessor1_Model1 |\n",
+       "| No | 0.36726022 | 0.6327398 | train/test split | 24 | No  | Preprocessor1_Model1 |\n",
+       "| No | 0.03867143 | 0.9613286 | train/test split | 28 | No  | Preprocessor1_Model1 |\n",
        "\n"
       ],
       "text/plain": [
        "  .pred_class .pred_Yes  .pred_No  id               .row Attrition\n",
-       "1 No          0.33294762 0.6670524 train/test split  1   Yes      \n",
-       "2 No          0.25913333 0.7408667 train/test split  5   No       \n",
-       "3 No          0.06323810 0.9367619 train/test split 10   No       \n",
-       "4 No          0.17057619 0.8294238 train/test split 22   Yes      \n",
-       "5 No          0.38169206 0.6183079 train/test split 24   No       \n",
-       "6 No          0.03181905 0.9681810 train/test split 28   No       \n",
+       "1 No          0.31360476 0.6863952 train/test split  1   Yes      \n",
+       "2 No          0.23238095 0.7676190 train/test split  5   No       \n",
+       "3 No          0.09271905 0.9072810 train/test split 10   No       \n",
+       "4 No          0.15583810 0.8441619 train/test split 22   Yes      \n",
+       "5 No          0.36726022 0.6327398 train/test split 24   No       \n",
+       "6 No          0.03867143 0.9613286 train/test split 28   No       \n",
        "  .config             \n",
        "1 Preprocessor1_Model1\n",
        "2 Preprocessor1_Model1\n",
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 36,
    "id": "949dba46",
    "metadata": {
     "vscode": {
@@ -2303,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "1b3a7f0a",
    "metadata": {
     "vscode": {
@@ -2402,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 38,
    "id": "2f7dfdaf",
    "metadata": {
     "vscode": {
@@ -2426,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 39,
    "id": "3e78a894",
    "metadata": {
     "vscode": {
@@ -2463,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 40,
    "id": "b4764a41",
    "metadata": {
     "vscode": {
@@ -2484,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 41,
    "id": "e4629679",
    "metadata": {
     "vscode": {
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 42,
    "id": "c6ea921f",
    "metadata": {
     "vscode": {
@@ -2528,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 43,
    "id": "46d25650",
    "metadata": {
     "vscode": {
@@ -2546,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 44,
    "id": "2b8f0ecf",
    "metadata": {
     "vscode": {
@@ -2558,7 +2558,7 @@
      "data": {
       "text/plain": [
        "   user  system elapsed \n",
-       "  37.86    1.17   92.76 "
+       "  33.37    1.11   95.80 "
       ]
      },
      "metadata": {},
@@ -2588,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 45,
    "id": "536c4619",
    "metadata": {
     "vscode": {
@@ -2676,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 46,
    "id": "731bb91c",
    "metadata": {
     "vscode": {
@@ -2696,7 +2696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 47,
    "id": "82d6fe5e",
    "metadata": {
     "vscode": {
@@ -2721,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 48,
    "id": "e09b58c8",
    "metadata": {
     "vscode": {
@@ -2807,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 49,
    "id": "1700bc1e",
    "metadata": {
     "vscode": {
@@ -2840,7 +2840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 50,
    "id": "31fac4e7",
    "metadata": {
     "vscode": {
@@ -2911,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 51,
    "id": "6ceb7ee5",
    "metadata": {
     "vscode": {
@@ -2989,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 52,
    "id": "c45cd4a8",
    "metadata": {
     "vscode": {
@@ -3162,7 +3162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 53,
    "id": "da4323c3",
    "metadata": {
     "vscode": {
@@ -3239,7 +3239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 54,
    "id": "3ca24fb2",
    "metadata": {
     "vscode": {
@@ -3254,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 55,
    "id": "a5483bab",
    "metadata": {
     "vscode": {
@@ -3297,7 +3297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 56,
    "id": "84310830",
    "metadata": {
     "vscode": {
@@ -3417,7 +3417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 57,
    "id": "f3261a83",
    "metadata": {
     "vscode": {
@@ -3459,7 +3459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 58,
    "id": "0332754d",
    "metadata": {
     "vscode": {
@@ -3578,10 +3578,9 @@
     "5. Environment satisfaction\n",
     "\n",
     "**Predictor 1. Monthly income**  \n",
-    "Relationship with attrition: resembling U shape\n",
+    "Relationship with attrition: resembling L shape\n",
     "- This predictor is also not surprising as employment is a transactional relationship.\n",
     "- If employees feel the financial return is not sufficient for their effort, they may leave in search of a more satisfying contract.\n",
-    "- Additionally, at a certain point, being paid more may lead employees to seek new opportunities where they may be able to earn even more.\n",
     "\n",
     "**Predictor 2. Overtime (yes)**  \n",
     "Relationship with attrition: linear (positive)\n",
@@ -3589,7 +3588,7 @@
     "- This, in turn, may lead to more work-related stress, which makes employees more likely to leave the company.\n",
     "\n",
     "**Predictor 3. Age**  \n",
-    "Relationship with attrition: resembling U shape\n",
+    "Relationship with attrition: resembling L shape\n",
     "- The relationship between this predictor and attrition suggests that younger people are more likely to leave.\n",
     "- As they age, they become less likely to leave, up to a certain point.\n",
     "- After that, they become more likely to leave, but not as likely as their younger counterparts.\n",
